      libc-bin provides a C.UTF-8.
  * debian/triggers:
    + [NT] Remove unused trigger now that stable's libc-bin
      provides a C.UTF-8.

  * doc/tutorial/**/*.pod:
    + [NT] Fix a number of spelling mistakes in the POD.
  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Add a section about how to avoid some common ways
      of introducing security issues.

  * lib/*:
    + [NT] Fix a number of spelling mistakes in the POD.
  * lib/Lintian/Collect/{Package,Binary}.pm:
    + [NT] Accept Lintian::Path objects to unpacked and control.
  * lib/Lintian/Collect/Source.pm:
    + [NT] Provide a "source" specific is_non_free method that reads
      the "Section"-field from d/control instead of the .dsc.  This
      fixes false-positives "problematic licenses" for non-free
      packages.  Thanks to Bastien Roucariès for the report.
      (Closes: #709041)
  * lib/Lintian/Path.pm:
    + [NT] Rename link_resolved to link_normalized.
  * lib/Lintian/Unpacker.pm:
    + [NT] On platform that support it, change the "name" of the
      process running the collection.  This makes it easier to
      see what collections are currently being run (like in the
      versions prior to 2.5.12).  For platforms, where it is
      not possible to change the name of a running process, the
      unpack jobs will simply be named "lintian" like its parent.
  * lib/Lintian/Util.pm:
    + [NT] Fix a race condition in touch_file.
    + [NT] Add sanity check in perm2oct for bad permission
      strings and throw errors when they are seen (instead
      of returning 0).
    + [NT] Require that the input file is present for
      read_dpkg_control and get_deb_control.
    + [NT] In copy_dir, pass --reflink=auto to cp.
    + [NT] Replace resolve_pkg_path with to normalize_pkg_path.
      The latter has slightly different return values in some
      cases.

  * private/refresh-perl-provides:
    + [NT] Apply patch from Niko Tyni to improve Lintian's